--- a/user-service/docker/php/Dockerfile
+++ b/user-service/docker/php/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get update && apt-get install -y \
     git curl unzip zip libzip-dev libonig-dev libxml2-dev libpng-dev libjpeg-dev libfreetype6-dev \
     && docker-php-ext-install pdo pdo_mysql zip mbstring gd
 
+RUN docker-php-ext-install sockets
+
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 EXPOSE 8000
