Finished module register and integration rabbitMQ for send notification of email.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,10 @@ services:
     build:
       context: ./user-service/docker/php
     container_name: user-service-app
-    user: root
+    user: "${UID}:${GID}"
+    environment:
+      UID: ${UID}
+      GID: ${GID}
     restart: unless-stopped
     volumes:
       - ./user-service:/var/www/html
