feat: installed Laravel and RabbitMQ package in notification service.

--- a/notification-service/docker/php/Dockerfile
+++ b/notification-service/docker/php/Dockerfile
@@ -2,10 +2,12 @@ FROM php:8.2-fpm
 
 WORKDIR /var/www/html
 
+# Instala todas as dependências de uma vez só
 RUN apt-get update && apt-get install -y \
     git curl unzip zip libzip-dev libonig-dev libxml2-dev libpng-dev libjpeg-dev libfreetype6-dev \
-    && docker-php-ext-install pdo pdo_mysql zip mbstring gd
+    && docker-php-ext-install pdo pdo_mysql zip mbstring gd sockets
 
+# Copia o composer do container oficial
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 EXPOSE 8000
