--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -132,6 +132,15 @@ services:
       - notification-db-data:/var/lib/mysql
     networks:
       - backend-network
+  
+  mailhog:
+    image: mailhog/mailhog
+    container_name: mailhog
+    ports:
+      - "8025:8025"
+      - "1025:1025"
+    networks:
+      - backend-network
 
 networks:
   backend-network:
