--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,17 @@ services:
       - "15672:15672"     # RabbitMQ Web UI
     networks:
       - backend-network
+  vue-frontend:
+    build:
+      context: ./frontend
+      dockerfile: docker/Dockerfile
+    container_name: vue-frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    command: npm run dev -- --host 0.0.0.0
 
   user-service:
     build:
